--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "homepage": "https://iskine.github.io/react-todo-app",
   "name": "react-todo-app",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "dependencies": {
     "@apollo/client": "^3.10.4",
     "@emotion/react": "^11.11.4",
